# tinygrad-tensor-puzzles

./: README.md  pyproject.toml
src/: lib.py
